# rust_wave

./: Cargo.toml  README.md
src/: lib.rs  main.rs  tests.rs
src/controller/: channel.rs  dsp.rs  effects.rs  math.rs  mod.rs  sender.rs  stream.rs
src/controller/dsp/: detection.rs  melbank.rs  smoothing.rs
src/controller/effects/: bass.rs  color_spectrum.rs  energy.rs  fft.rs  melbank.rs  shine.rs  spectrum.rs
src/gui/: view.rs  view_model.rs
src/gui/view/: color_slider.rs
visualizer_core/: Cargo.toml
visualizer_core/src/: dsp.rs  effects.rs  lib.rs  math.rs  sender.rs  stream.rs
visualizer_core/src/dsp/: detection.rs  melbank.rs  smoothing.rs
visualizer_core/src/effects/: bass.rs  color_spectrum.rs  energy.rs  fft.rs  melbank.rs  shine.rs  spectrum.rs
visualizer_core/src/stream/: channel.rs
visualizer_core/src/test/: mod.rs  sacn.rs
visualizer_gui/: Cargo.toml
visualizer_gui/src/: main.rs  utils.rs  view.rs  view_model.rs
visualizer_gui/src/gui/: mod.rs  view.rs  view_model.rs
visualizer_gui/src/view/: color_slider.rs  utils.rs
